--- a/mqtt/mosquitto.conf
+++ b/mqtt/mosquitto.conf
@@ -1,5 +1,32 @@
+# Mosquitto MQTT Broker Configuration
+
+# Network settings
 listener 1883
+listener 9001
+protocol websockets
+
+# Security settings
 allow_anonymous true
+password_file /mosquitto/config/passwd
+
+# Logging
+log_dest stdout
+log_type error
+log_type warning
+log_type notice
+log_type information
+
+# Persistence
 persistence true
 persistence_location /mosquitto/data/
-log_dest file /mosquitto/log/mosquitto.log
+
+# Connection settings
+max_connections 1000
+max_inflight_messages 100
+
+# Message settings
+message_size_limit 1048576
+max_queued_messages 1000
+
+# WebSocket settings
+websockets_log_level 255
