--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,4 @@
 {
-  "functions": {
-    "api/app.py": {
-      "maxDuration": 10
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/app.py"
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
